--- a/app/views/merchant/bulk_discounts/show.html.erb
+++ b/app/views/merchant/bulk_discounts/show.html.erb
@@ -1,3 +1,4 @@
 <h1>Bulk Discounts #<%= @bulk_discount.id %> </h1>
 <h3>Item Threshold: <%= @bulk_discount.threshold %> </h3>
 <h3>Percent Discount: <%= @bulk_discount.percent_discount %> </h3>
+<%= link_to "Edit Discount", edit_merchant_bulk_discount_path(@merchant, @bulk_discount) %>
