--- a/app/views/merchant/bulk_discounts/edit.html.erb
+++ b/app/views/merchant/bulk_discounts/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'form', locals: { method: :patch, url: merchant_bulk_discount_path(@merchant, @bulk_discount), class: 'merchant_item_form', local: true, model: @item} %>
+<%= render partial: 'form', locals: { method: :patch, url: merchant_bulk_discount_path(@merchant, @bulk_discount), local: true, model: @bulk_discount} %>
