--- a/app/views/merchant/invoices/show.html.erb
+++ b/app/views/merchant/invoices/show.html.erb
@@ -32,6 +32,7 @@
         <th class="th1">Item Name</th>
         <th class="th1">Quantity</th>
         <th class="th1">Unit Price</th>
+        <th class="th1">Discounts Applied</th>
         <th class="th1">Status</th>
       </tr>
     </thead>
@@ -43,6 +44,9 @@
             <td style="text-align:center"><%= i.item.name %></td>
             <td style="text-align:center"><%= i.quantity %></td>
             <td style="text-align:center"><%= number_to_currency(i.unit_price) %></td>
+            <% if i.has_discount? == true %>
+              <td style="text-align:center"><%= link_to "#{i.discount_applied.percent_discount}", merchant_bulk_discount_path(@merchant, i.discount_applied) %></td>
+            <% end %>
             <td style="text-align:center"><%= form_with model: @invoice, url: merchant_invoice_path(@merchant, @invoice), method: :patch do |f| %>
                                             <%= f.select :status, Invoice.statuses.keys, selected: "#{@invoice.status}" %>
                                             <%= f.submit 'Update Invoice' %>
