add link to create new discount

--- a/app/views/merchant/bulk_discounts/index.html.erb
+++ b/app/views/merchant/bulk_discounts/index.html.erb
@@ -8,3 +8,5 @@
     <%= render partial: 'button', locals: { method: :delete, url: merchant_bulk_discount_path(@merchant, discount), local: true, model: discount} %>
   </section>
 <% end %>
+
+<%= link_to "Create New Discount", new_merchant_bulk_discount_path(@merchant) %>
